--- a/private/js/client/utils/particlesjs-config.json
+++ b/private/js/client/utils/particlesjs-config.json
@@ -4,7 +4,7 @@
       "value": 100,
       "density": {
         "enable": true,
-        "value_area": 800
+        "value_area": 880
       }
     },
     "color": {
@@ -17,7 +17,7 @@
         "color": "#000000"
       },
       "polygon": {
-        "nb_sides": 5
+        "nb_sides": 6
       },
       "image": {
         "src": "img/github.svg",
@@ -26,8 +26,8 @@
       }
     },
     "opacity": {
-      "value": 0.5,
-      "random": false,
+      "value": 1,
+      "random": true,
       "anim": {
         "enable": false,
         "speed": 1,
@@ -36,25 +36,25 @@
       }
     },
     "size": {
-      "value": 3,
+      "value": 4,
       "random": true,
       "anim": {
         "enable": false,
-        "speed": 30,
+        "speed": 40,
         "size_min": 0.1,
         "sync": false
       }
     },
     "line_linked": {
       "enable": true,
-      "distance": 150,
+      "distance": 110,
       "color": "#ffffff",
-      "opacity": 0.4,
+      "opacity": 0.7,
       "width": 1
     },
     "move": {
       "enable": true,
-      "speed": 5,
+      "speed": 4,
       "direction": "none",
       "random": true,
       "straight": false,
@@ -72,7 +72,7 @@
     "events": {
       "onhover": {
         "enable": false,
-        "mode": "grab"
+        "mode": "repulse"
       },
       "onclick": {
         "enable": true,
